--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -63,3 +63,7 @@ features:
 #    url: 'https://github.com/HugoBlox/hugo-blox-builder/'
 #    content_dir: starters/blog/content
 #    branch: main
+
+# publication
+publications:
+  citation_style: "sangdon"
