--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -47,7 +47,7 @@ build:
 enableGitInfo: false
 summaryLength: 30
 pagination:
-  pagerSize: 10
+  pagerSize: 100 # the number of items per page
 enableEmoji: true
 enableRobotsTXT: true
 footnotereturnlinkcontents: <sup>^</sup>
