--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,15 +8,18 @@ main:
   - name: News
     url: news/
     weight: 2
+  - name: Research
+    url: research/
+    weight: 3
   - name: Publication
     url: publication/
-    weight: 3
+    weight: 4
   - name: Team
     url: team/
-    weight: 4
+    weight: 5
   - name: Teaching
     url: teaching/
-    weight: 5
+    weight: 6
   - name: Contact
     url: contact/
-    weight: 6
+    weight: 7
